tweaking css, trying to fix mobile alignment woes

--- a/app/assets/stylesheets/photobooth.css
+++ b/app/assets/stylesheets/photobooth.css
@@ -178,6 +178,7 @@ body.night h1 {
   font-size: 12px;
   color: #000;
   opacity: 0.8;
+  padding-bottom:5px;
 }
 #hatcount {
   position: relative;
